# searchlite

./: README.md  install.sh  pyproject.toml  setup.cfg
searchlite/: __init__.py  install.sh  optimized_multi_query_searcher.py  providers.py  searcher.py
searchlite/src/searchlite/: optimized_multi_query_searcher.py
searchlite/src/searchlite.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py
src/searchlite/: __init__.py  providers.py  searcher.py
src/searchlite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: main.py
test/: main.py
